Fix pic on small devices

--- a/css/main.css/main.css
+++ b/css/main.css/main.css
@@ -52,7 +52,8 @@
 }
 
 /* line 56, C:/xampp/htdocs/CSS-Design-Utilities/My_Portfolio/scss/_menu.scss */
-.menu-branding, .menu-nav {
+.menu-branding,
+.menu-nav {
   display: flex;
   flex-flow: column wrap;
   align-items: center;
@@ -158,7 +159,8 @@
 
 /* line 8, C:/xampp/htdocs/CSS-Design-Utilities/My_Portfolio/scss/main.scss */
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto',
+    sans-serif;
   color: #fff;
   height: 100%;
   margin: 0;
@@ -259,7 +261,8 @@ main#home h1 {
 .about-info {
   display: grid;
   grid-gap: 30px;
-  grid-template-areas: 'bioimg bio bio' 'job1 job2 job3';
+  grid-template-areas: 'bioimg bio bio'
+    'job1 job2 job3';
   grid-template-columns: repeat(3, 1fr);
 }
 
@@ -332,7 +335,9 @@ main#home h1 {
 }
 
 /* line 146, C:/xampp/htdocs/CSS-Design-Utilities/My_Portfolio/scss/main.scss */
-.projects .btn, .projects .btn-dark, .projects .btn-light {
+.projects .btn,
+.projects .btn-dark,
+.projects .btn-light {
   display: block;
   padding: 0.5rem 1rem;
   border: 0;
@@ -340,7 +345,9 @@ main#home h1 {
 }
 
 /* line 152, C:/xampp/htdocs/CSS-Design-Utilities/My_Portfolio/scss/main.scss */
-.projects .btn:hover, .projects .btn-dark:hover, .projects .btn-light:hover {
+.projects .btn:hover,
+.projects .btn-dark:hover,
+.projects .btn-light:hover {
   background: #eece1a;
   color: #000;
 }
@@ -402,6 +409,7 @@ main#home h1 {
 }
 
 @media screen and (min-width: 1171px) {
+
   /* line 3, C:/xampp/htdocs/CSS-Design-Utilities/My_Portfolio/scss/_mobile.scss */
   .projects {
     grid-template-columns: repeat(4, 1fr);
@@ -409,6 +417,7 @@ main#home h1 {
 }
 
 @media screen and (min-width: 769px) and (max-width: 1170px) {
+
   /* line 11, C:/xampp/htdocs/CSS-Design-Utilities/My_Portfolio/scss/_mobile.scss */
   .projects {
     grid-template-columns: repeat(3, 1fr);
@@ -416,11 +425,13 @@ main#home h1 {
 }
 
 @media screen and (max-width: 768px) {
+
   /* line 19, C:/xampp/htdocs/CSS-Design-Utilities/My_Portfolio/scss/_mobile.scss */
   main {
     align-items: center;
     text-align: center;
   }
+
   /* line 24, C:/xampp/htdocs/CSS-Design-Utilities/My_Portfolio/scss/_mobile.scss */
   ul.menu-nav,
   div.menu-branding {
@@ -428,37 +439,51 @@ main#home h1 {
     width: 100%;
     min-height: 0;
   }
+
   /* line 30, C:/xampp/htdocs/CSS-Design-Utilities/My_Portfolio/scss/_mobile.scss */
   ul.menu-nav.show,
   div.menu-branding.show {
     transform: translate3d(0, 0, 0);
   }
+
   /* line 35, C:/xampp/htdocs/CSS-Design-Utilities/My_Portfolio/scss/_mobile.scss */
   .menu-nav {
     height: 75vh;
     transform: translate3d(-100%, 0, 0);
     font-size: 24px;
   }
+
   /* line 41, C:/xampp/htdocs/CSS-Design-Utilities/My_Portfolio/scss/_mobile.scss */
   .menu-branding {
     height: 30vh;
     transform: translate3d(100%, 0, 0);
   }
+
   /* line 45, C:/xampp/htdocs/CSS-Design-Utilities/My_Portfolio/scss/_mobile.scss */
   .menu-branding .portrait {
-    background: url("../../img/portrait_small.jpg");
+    background: url("../../img/26537566.jpg");
     width: 150px;
     height: 150px;
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
+
   /* line 52, C:/xampp/htdocs/CSS-Design-Utilities/My_Portfolio/scss/_mobile.scss */
   .about-info {
-    grid-template-areas: 'bioimg' 'bio' 'job1' 'job2' 'job3';
+    grid-template-areas: 'bioimg'
+      'bio'
+      'job1'
+      'job2'
+      'job3';
     grid-template-columns: 1fr;
   }
+
   /* line 62, C:/xampp/htdocs/CSS-Design-Utilities/My_Portfolio/scss/_mobile.scss */
   .projects {
     grid-template-columns: repeat(2, 1fr);
   }
+
   /* line 68, C:/xampp/htdocs/CSS-Design-Utilities/My_Portfolio/scss/_mobile.scss */
   .boxes div {
     font-size: 1rem;
@@ -466,10 +491,12 @@ main#home h1 {
 }
 
 @media screen and (max-width: 500px) {
+
   /* line 76, C:/xampp/htdocs/CSS-Design-Utilities/My_Portfolio/scss/_mobile.scss */
   main#home h1 {
     margin-top: 10vh;
   }
+
   /* line 80, C:/xampp/htdocs/CSS-Design-Utilities/My_Portfolio/scss/_mobile.scss */
   .projects {
     grid-template-columns: repeat(1, 1fr);
